# ChangeLog for dev-libs/libmcs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmcs/ChangeLog,v 1.34 2008/01/29 12:35:27 drac Exp $

  29 Jan 2008; Samuli Suominen <drac@gentoo.org> libmcs-0.6.0.ebuild:
  amd64 stable wrt #198820

  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> libmcs-0.6.0.ebuild:
  alpha stable wrt #198820, thanks to Tobias Klausmann for testing

  16 Jan 2008; Ferris McCormick <fmccor@gentoo.org> libmcs-0.6.0.ebuild:
  Sparc stable, part of Bug #198820.

  16 Jan 2008; Brent Baude <ranger@gentoo.org> libmcs-0.6.0.ebuild:
  Marking libmcs-0.6.0 ppc and ppc64 for bug 198820

  15 Jan 2008; Jeroen Roovers <jer@gentoo.org> libmcs-0.6.0.ebuild:
  Stable for HPPA (bug #198820).

  15 Jan 2008; Tony Vroon <chainsaw@gentoo.org> libmcs-0.6.0.ebuild:
  Marked stable on X86.

  14 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> libmcs-0.5.0.ebuild:
  ppc. stable

  05 Dec 2007; Joshua Kinard <kumba@gentoo.org> libmcs-0.6.0.ebuild:
  Marked unstable on mips.

  01 Dec 2007; Markus Rothe <corsair@gentoo.org> libmcs-0.5.0.ebuild:
  Stable on ppc64

  29 Oct 2007; Raúl Porcel <armin76@gentoo.org> libmcs-0.6.0.ebuild:
  Add ~alpha wrt #196169, thanks to Tobias Klausmann for testing

  23 Oct 2007; Jeroen Roovers <jer@gentoo.org> libmcs-0.5.0.ebuild:
  Stable for HPPA too (audacious).

  22 Oct 2007; Roy Marples <uberlord@gentoo.org> libmcs-0.6.0.ebuild:
  Keyworded #x86-fbsd, #196169.

  18 Oct 2007; Raúl Porcel <armin76@gentoo.org> libmcs-0.4.1.ebuild:
  alpha stable, thanks to Tobias Klausmann for testing

  17 Oct 2007; Tony Vroon <chainsaw@gentoo.org> libmcs-0.4.1.ebuild,
  libmcs-0.5.0.ebuild, libmcs-0.6.0.ebuild:
  Add missing dependency on >=dev-libs/libmowgli-0.4.0 as reported by Jeffrey
  Gardner <je_fro@gentoo.org>, bug #196169. Dropped alpha, mips & x86-fbsd
  keywords.

*libmcs-0.6.0 (17 Oct 2007)

  17 Oct 2007; Tony Vroon <chainsaw@gentoo.org> +libmcs-0.6.0.ebuild: