@@ -1,8 +1,16 @@
-DIST libmcs-0.5.0.tgz 91900 RMD160 e3fccf8980dcdca0d80d01e9bdfe8c3808a37de6 SHA1 60da9f66932e9e57c355b82d0f46d7b6e4c1d705 SHA256 d407ead4205d0d4013fa9d679ce7cc4fc05ad0ca9396e30367aa35125a4dd282
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST libmcs-0.6.0.tgz 106917 RMD160 e28b02b44e2d9c26969d475b1ba888d50d5d6363 SHA1 5cd3960f7a9c42eb136c49585a92be1e1549bd42 SHA256 7e6ee152b7fa1ab9aac2fe83fd4aed3c0792e5f2638c5c23d4405419f3a6a744
-DIST mcs-0.4.1.tgz 62922 RMD160 55051aa9084632f4e88a7b06b483fc7493d0c98e SHA1 b7e4df4ba1e36cb3dc1b1572105ebdc15ec62c13 SHA256 bc5d26230502f2b0546c8cdd8c98112759c10b6c7e2f7ec6d49d78ae88dfd6dd
-EBUILD libmcs-0.4.1.ebuild 1062 RMD160 cc41216895d96e56918bc37e71f6b50fb4e28826 SHA1 2d1580f2d48db5464e24a079afcf4a97e736f769 SHA256 e3ccf2e1876653f32bb8043af49bcaa7bf857f374f32ad2a4994055f5a364dc3
-EBUILD libmcs-0.5.0.ebuild 1029 RMD160 51ca97b6e94d0430e91c146f00987517fd9f722e SHA1 f31fb7bc2310a22c9c21d546f7a93b3f39f1c0be SHA256 519d12d3c00ab82cb133217e69da5a171b5a1b657befa91084c724d5c2e50ba2
+DIST libmcs-0.7.0.tgz 106300 RMD160 5817fcba32b0c697594bbb8fa2647654f290c383 SHA1 a4044047a31aaec8b6d97b6960f676eca9049cb1 SHA256 c54bf12b7d222fe2286ab4a116d5b44cc6374991ca37644cc5db83f97acf1287
 EBUILD libmcs-0.6.0.ebuild 1047 RMD160 a12eb3ae5833634e74d966d400a728306a74da8a SHA1 be3010fceb18d9deb694144edc406811a2f5d6c5 SHA256 d931413081782ae33c90d90affc16dfbabeac12c9110a0478fe286748f90607e
-MISC ChangeLog 4638 RMD160 d5806394c9cbe341e33e516107ce5672e63cb77e SHA1 b2e1ecc303ee69aa18751ec64c7ff6dc6b317199 SHA256 8283462404e83b87b8998c1c7550a0f6796628a6c3e55df58fde7d3711376237
+EBUILD libmcs-0.7.0.ebuild 1057 RMD160 deed89a51474d5c4dbc1c410e125728dbc799e00 SHA1 91d1ee592f100dd6bdbf2c94797d0b403ac5b23a SHA256 dfc64e610bbb002d7a58fe44a60cdd8a8aa6aa41c2728b7ac9f444c8d8096d03
+MISC ChangeLog 4863 RMD160 d5cdb09cb7d557c4e10b01127caf162523aa0512 SHA1 cdf37f843eec4ef23314558547faa0e02cd972ae SHA256 c6c594ce704f5570f31d2eef11c9921cf44ebb277927de9d3ae8dfe34f252c18
 MISC metadata.xml 310 RMD160 5b57282cd45b5ebfd0a5182cd665dbb684a7d25c SHA1 9f12cf187b3a67133f2ae900cf70fcc7f7a27b9a SHA256 c63ceb5c6294486637d1c424469d11db066aa906dc970e9be311c29a6563a3c6
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHuZv7p5vW4rUFj5oRAosgAKCOTzR5PMGnePNGKUaAYkBam4W/JgCghcX6
+By0dZSTNjXUs3PWbFgrUblc=
+=Lm39
+-----END PGP SIGNATURE-----
