@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmcs/libmcs-0.5.0.ebuild,v 1.5 2008/01/14 20:03:39 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libmcs/libmcs-0.7.0.ebuild,v 1.1 2008/02/18 14:54:15 chainsaw Exp $
 
 inherit flag-o-matic kde-functions multilib
 
@@ -10,11 +10,12 @@ SRC_URI="http://distfiles.atheme.org/${P}.tgz"
 
 LICENSE="BSD-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 hppa ~mips ppc ppc64 ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~hppa ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE="gnome kde"
 
-RDEPEND="gnome? ( >=gnome-base/gconf-2.6.0 )
-	 kde? ( kde-base/kdelibs )"
+RDEPEND=">=dev-libs/libmowgli-0.6.1
+	gnome? ( >=gnome-base/gconf-2.6.0 )
+	kde? ( kde-base/kdelibs )"
 
 src_compile() {
 	if use kde; then
